driver/usbloader: Add a USB loader for sunxi / Allwinner
Add a USB loader for sunxi, supporting SPL and U-Boot.

Signed-off-by: Simon Glass <sjg@chromium.org>

--- a/man/labgrid-device-config.5
+++ b/man/labgrid-device-config.5
@@ -146,6 +146,10 @@ See: \fI\%https://git.tizen.org/cgit/tools/testlab/sd\-mux/\fP
 Path to the sispmctl binary, used by the SiSPMPowerDriver.
 See: \fI\%https://sispmctl.sourceforge.net/\fP
 .TP
+.TP
+.B \fBsunxi\-fel\fP
+Path to the sunxi\-fel binary, used by the SunxiUSBDriver.
+See: \fI\%https://linux\-sunxi.org/FEL\fP
 .B \fBuhubctl\fP
 Path to the uhubctl binary, used by the USBPowerDriver.
 See: \fI\%https://github.com/mvp/uhubctl\fP
