driver/usbloader: Add a USB loader for sunxi / Allwinner
Add a USB loader for sunxi, supporting SPL and U-Boot.

Signed-off-by: Simon Glass <sjg@chromium.org>

--- a/man/labgrid-device-config.5
+++ b/man/labgrid-device-config.5
@@ -156,6 +156,10 @@ See:  <https://github.com/openssh/openssh\-portable>
 Path to the sshfs binary, used by the SSHDriver.
 See:  <https://github.com/libfuse/sshfs> 
 .TP
+.B \fBsunxi\-fel\fP
+Path to the sunxi\-fel binary, used by the SunxiUSBDriver.
+See:  <https://linux\-sunxi.org/FEL> 
+.TP
 .B \fBuhubctl\fP
 Path to the uhubctl binary, used by the USBPowerDriver.
 See:  <https://github.com/mvp/uhubctl> 
