--- a/man/labgrid-device-config.5
+++ b/man/labgrid-device-config.5
@@ -148,6 +148,10 @@ See:  <https://git.tizen.org/cgit/tools/testlab/sd\-mux/>
 Path to the sispmctl binary, used by the SiSPMPowerDriver.
 See:  <https://sispmctl.sourceforge.net/> 
 .TP
+.B \fBsmdk\-usbdl\fP
+Path to the smdk\-usbdl binary, used by the SamsungUSBDriver.
+See:  <http://www.fluff.org/ben/smdk/tools> 
+.TP
 .B \fBssh\fP
 Path to the ssh binary, used by the SSHDriver.
 See:  <https://github.com/openssh/openssh\-portable> 
