driver/usbloader: Add a loader for Tegra
Add a USB loader for tegra, supporting BCT and U-Boot.

Signed-off-by: Simon Glass <sjg@chromium.org>

--- a/man/labgrid-device-config.5
+++ b/man/labgrid-device-config.5
@@ -160,6 +160,10 @@ See:  <https://github.com/libfuse/sshfs>
 Path to the sunxi\-fel binary, used by the SunxiUSBDriver.
 See:  <https://linux\-sunxi.org/FEL> 
 .TP
+.B \fBtegrarcm\fP
+Path to the tegrarcm binary, used by the TegraUSBDriver.
+See:  <https://github.com/NVIDIA/tegrarcm> 
+.TP
 .B \fBuhubctl\fP
 Path to the uhubctl binary, used by the USBPowerDriver.
 See:  <https://github.com/mvp/uhubctl> 
