remote/client: Provide an option to acquire a place
It is common to acquire a place and then use it to access the console.
Add a -a option to support this, to avoid running labgrid-client twice,
which takes longer and makes error handling harder.

Signed-off-by: Simon Glass <sjg@chromium.org>

--- a/man/labgrid-client.1
+++ b/man/labgrid-client.1
@@ -65,6 +65,9 @@ file and strategy
 strategy state to force into before switching to desired state, requires a
 desired state (\fB\-s\fP/\fB\-\-state\fP/\fBLG_STATE\fP)
 .TP
+.B  \-a\fP,\fB  \-\-acquire
+acquire the place before performing the requested operation
+.TP
 .B  \-d\fP,\fB  \-\-debug
 enable debugging
 .TP
