remote/client: Support finding a place by role
The role (or is it target?) is used in the environment and allows
multiple roles to use the same place. It is therefore often better to
specify the role to use rather than the place, since the place can be
determined from the role.

Add a new -r option to support this.

Signed-off-by: Simon Glass <sjg@chromium.org>

--- a/man/labgrid-client.1
+++ b/man/labgrid-client.1
@@ -51,6 +51,9 @@ display command line help
 .BI \-p \ PLACE\fR,\fB \ \-\-place \ PLACE
 specify the place to operate on
 .TP
+.BI \-r \ ROLE\fR,\fB \ \-\-role \ ROLE
+specify the role to operate on
+.TP
 .BI \-x \ URL\fR,\fB \ \-\-crossbar \ URL
 the crossbar url of the coordinator, defaults to \fBws://127.0.0.1:20408/ws\fP
 .TP
