remote/client: Support finding a place by role
The role (or is it target?) is used in the environment and allows
multiple roles to use the same place. It is therefore often better to
specify the role to use rather than the place, since the place can be
determined from the role.

Add a new -r option to support this.

Signed-off-by: Simon Glass <sjg@chromium.org>

--- a/man/labgrid-client.1
+++ b/man/labgrid-client.1
@@ -54,6 +54,9 @@ specify the place to operate on
 .BI \-x \ ADDRESS\fR,\fB \ \-\-coordinator \ ADDRESS
 coordinator \fBHOST[:PORT]\fP to connect to, defaults to \fB127.0.0.1:20408\fP
 .TP
+.BI \-r \ ROLE\fR,\fB \ \-\-role \ ROLE
+specify the role to operate on
+.TP
 .BI \-c \ CONFIG\fR,\fB \ \-\-config \ CONFIG
 set the configuration file
 .TP
